# coffee_shop

./: .dockerignore  .env.backend.example  .env.database.example  .gitignore  Dockerfile  Makefile  READ.md  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/: .env.example  config.py  db.py  dependencies.py  main.py  worker.py
app/dependencies/: auth_dependencies.py  container.py  dependencies.py
app/dependencies/providers/: conn_provider.py  repo_provider.py  service_provider.py
app/exceptions/: __init__.py  application_exceptions.py  exceptions.py  handlers.py  repository_exceptions.py
app/middleware/: exception_handler.py  logging_middleware.py
app/models/: __init__.py  base.py  cart.py  cart_product.py  category.py  order.py  order_item.py  product.py  user.py
app/repositories/: __init__.py  base_repository.py  cart_repository.py  category_repository.py  order_repository.py  product_repository.py  user_repository.py
app/routers/: __init__.py  auth.py  cart.py  categories.py  orders.py  products.py  users.py
app/schemas/: cart.py  cart_schema.py  category.py  category_schema.py  item.py  order.py  order_schema.py  product.py  token.py  token_schema.py  user.py  user_schema.py
app/services/: auth_service.py  cart_service.py  category_service.py  email_service.py  order_service.py  product_service.py  user_service.py
app/utils/: celery.py  security.py  tasks.py  uow.py
app/utils/loggers/: console_destination.py  file_destination.py  log_destination.py  logger.py
docs/: improvements.md
migrations/: env.py
migrations/versions/: 1393bcf60b71_added_soft_delte_for_order.py  5c56c1da8190_init.py  cbc08d3d3caa_added_active_feild_for_product.py  fb3e5fc71ea1_init.py
sql/: test_data.sql
