[project]
name = "coffee_shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "alembic==1.13.1",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==4.3.0",
    "billiard==4.2.1",
    "celery==5.3.6",
    "cffi==1.17.1",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "cryptography==44.0.3",
    "dishka==1.6.0",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "fastapi==0.109.2",
    "fastapi-pagination==0.13.1",
    "flower==2.0.1",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "humanize==4.12.3",
    "idna==3.10",
    "kombu==5.5.3",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "passlib==1.7.4",
    "prometheus-client==0.19.0",
    "prompt-toolkit==3.0.51",
    "psycopg[binary]==3.2.9",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic==2.6.1",
    "pydantic-core==2.16.2",
    "pydantic-settings==2.1.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "pytz==2025.2",
    "redis==5.0.1",
    "rsa==4.9.1",
    "ruff==0.11.10",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.27",
    "starlette==0.36.3",
    "tornado==6.4",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "uv==0.7.3",
    "uvicorn==0.27.1",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "websockets==12.0",
]


[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["migrations/", ]
lint.select = [
    "ALL", # include all the rules, including new ones
]
lint.ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "I001",
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",
    "D205",
    "D211",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TRY300", 
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "G004",
]
